# RedEngine

./: CMakeLists.txt  README.md
RedEngine/: CMakeLists.txt
RedEngine/include/: redengine.hpp
RedEngine/src/: lib.cpp  lib.hpp
sandbox/: CMakeLists.txt  main.cpp
sandbox/src/: main.cpp
